# jwt_authorizer

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: lambda_zip.yml
src/: auth.rs  enums.rs  lib.rs  main.rs  structs.rs  utils.rs
tests/: integration_tests.rs
tests/resources/: auth0.keys.json  example_event_from_api_gateway.json
