[package]
name = "jwt_authorizer"
version = "0.0.1"
authors = ["Javi Romero <javi@boto.io>"]
edition = "2018"
description = "Authorizer service"
documentation = "INTERNAL SITE"
repository = "https://github.com/botoapp/b-authorizer"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
log = "^0.4"
env_logger = "0.9"
lambda_runtime = "0.4.1"
maplit = "1.0.2"
fehler = "1.0.0"
strum = "0.21"
strum_macros = "0.21"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10.36", features = ["vendored"] }

[dev-dependencies]
mockall = "0.10.2"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
